--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: diff
-version: 0.1.1
+version: 0.1.2
 authors:
 - Adam Singer <financeCoding@gmail.com>
 description: A diff library
 homepage: https://github.com/dart-gde/diff.dart
 environment:
-  sdk: '>=1.0.0 <2.0.0'
+  sdk: '>=1.0.0 <3.0.0'
 dev_dependencies:
-  unittest: ">=0.11.0 <0.12.0"
+  test: '^1.3.0'
